Fixed image getting cut off on small viewport height

--- a/css/index.css
+++ b/css/index.css
@@ -591,16 +591,13 @@ video {
   width: 100%;
   cursor: zoom-out;
   max-height: 625px;
+  border-radius: 4px;
 }
 .image-modal-content-wrapper {
   width: 70vw;
   display: block;
-  margin: auto;
-  position: absolute;
   max-width: 1200px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  margin: 5% auto;
 }
 @media (max-width: 1000px) {
   .image-modal-content-wrapper {
