--- a/less/my-work.less
+++ b/less/my-work.less
@@ -259,18 +259,18 @@ video {
   width: 100%;
   cursor: zoom-out;
   max-height: 625px;
+  border-radius: 4px;
 }
 
 .image-modal-content-wrapper {
   width: 70vw;
   display: block;
-  margin: auto;
-  position: absolute;
+  // position: absolute;
   max-width: 1200px;
-
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  // left: 50%;
+  // top: 50%;
+  // transform: translate(-50%, -50%);
+  margin: 5% auto;
   @media (max-width: 1000px) {
     width: 85vw;
   }
